Bugfixing layout issues

--- a/app/assets/stylesheets/spree/frontend/spree_bootstrap_frontend.css.scss
+++ b/app/assets/stylesheets/spree/frontend/spree_bootstrap_frontend.css.scss
@@ -167,7 +167,7 @@ table.existing-credit-card-list > tbody > tr > td {
 }
 
 table.existing-credit-card-list > tbody > tr > td:after {
-  content: '/';
+  content: ' ';
 }
 
 table.existing-credit-card-list > tbody > tr > td:last-child:after {
@@ -280,9 +280,7 @@ nav#taxonomies {
 }
 
 .subtaxon-section {
-  padding-bottom: 15px;
   margin-bottom: 15px;
-  min-height: 100px;
 }
 
 .user-info-area {
